--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ Django==5.0.4
 django-debug-toolbar==4.3.0
 django-rest-framework==0.1.0
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+PyJWT==2.8.0
 sqlparse==0.4.4
