--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       - .env
     ports:
       - "8001:8000"
+    volumes:
+      - my_media:/files/media
     command: >
       sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
@@ -25,4 +27,5 @@ services:
 
 volumes:
   my_db:
+  my_media:
 
